--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snake Game</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style/styles.css" />
   </head>
   <body>
     <h1>The Snake Game</h1>
@@ -44,9 +44,9 @@
     <!--
 
     -->
-    <script src="objects.js"></script>
-    <script src="screen.js"></script>
-    <script src="set.js"></script>
-    <script src="game.js"></script>
+    <script src="js/objects.js"></script>
+    <script src="js/screen.js"></script>
+    <script src="js/set.js"></script>
+    <script src="js/game.js"></script>
   </body>
 </html>
