--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>The Snake Game</h1>
-
+    <div id="title">
+      <p class="desc">Score: 0</p>
+      <h1>The Snake Game</h1>
+      <p class="desc">Speed: 0</p>
+    </div>
     <div class="contenedor">
       <div id="score"></div>
       <canvas width="500" height="500" id="screen"></canvas>
@@ -41,9 +44,6 @@
         <button class="btn btn-start" id="btn-start">Start</button>
       </div>
     </div>
-    <!--
-
-    -->
     <script src="objects.js"></script>
     <script src="screen.js"></script>
     <script src="set.js"></script>
