add class Egg and add a object

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </div>
     </div>
     <script src="objects.js"></script>
+    <script src="./js/Class/Egg.js"></script>
     <script src="screen.js"></script>
     <script src="set.js"></script>
     <script src="game.js"></script>
