--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <main class="height-100">
       <h1 class='aling-center'>The Snake Game</h1>
       <div class='info width-100'>
-        <p id='score' class="aling-center">Score: 0</p>
-        <p id='speed' class="aling-center">Speed: 1</p>
+        <p id='score' class="aling-center"></p>
+        <p id='speed' class="aling-center"></p>
       </div>
       <canvas width="500" height="500" id="screen"></canvas>
     </main>
-    <div id="modal" class="width-100 height-100">
+    <div id="modal"  class="width-100 height-100 has-fade">
       <div class="modal-content">
         <h2>Click start</h2>
         <div class="container">
@@ -28,18 +28,19 @@
               <option value="5">5</option>
             </select>
         </div>
-        <button class="btn btn-start" id="btn-start">Start</button>
+        <button id="btn-modal">Start</button>
       </div>
     </div>
     <!---
     <script src="set.js"></script>
     <script src="objects.js"></script>
     <script src="./js/Class/Egg.js"></script>
-    <script src="./js/Class/Snake.js"></script>
     <script src="screen.js"></script>
 -->
     <script src="./js/elements.js"></script>
     <script src="./js/Class/Egg.js"></script>
+    <script src="./js/Class/Element.js"></script>
+    <script src="./js/Class/Snake.js"></script>
     <script src="./js/Class/Limited.js"></script>
     <script src="./js/Class/Status.js"></script>
     <script src="./js/game.js"></script>
