--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snake Game</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/public/css/styles.css" />
   </head>
   <body>
     <main class="height-100">
@@ -36,13 +36,13 @@
     <script src="objects.js"></script>
     <script src="./js/Class/Egg.js"></script>
     <script src="screen.js"></script>
--->
     <script src="./js/elements.js"></script>
     <script src="./js/Class/Egg.js"></script>
-    <script src="./js/Class/Element.js"></script>
     <script src="./js/Class/Snake.js"></script>
     <script src="./js/Class/Limited.js"></script>
     <script src="./js/Class/Status.js"></script>
     <script src="./js/game.js"></script>
+-->
+    <script type="module" src="/public/js/Element.js"></script>
   </body>
 </html>
