--- a/src/static/index.html
+++ b/src/static/index.html
@@ -41,8 +41,9 @@
     <script src="./js/Class/Snake.js"></script>
     <script src="./js/Class/Limited.js"></script>
     <script src="./js/Class/Status.js"></script>
-    <script src="./js/game.js"></script>
 -->
     <script type="module" src="/public/js/Element.js"></script>
+    <script type="module" src="/public/js/Screen.js"></script>
+    <script type="module" src="/public/js/Game.js"></script>
   </body>
 </html>
