--- a/src/static/index.html
+++ b/src/static/index.html
@@ -31,6 +31,6 @@
         <button id="btn-modal">Start</button>
       </div>
     </div>
-    <script type="module" src="/public/js/Game.js"></script>
+    <script type="module" src="/public/js/index.js"></script>
   </body>
 </html>
