change speedSeletor name in css

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -20,7 +20,7 @@
         <h2>Click start</h2>
         <div class="container">
             <h2>Speed</h2>
-            <select id="speedSelector">
+            <select id="speed-selector">
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
