Add limit and the snake can bite itself.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,17 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/public/img/favicon.ico" type="image/x-icon">
     <title>Snake Game</title>
     <link rel="stylesheet" href="/public/css/styles.css" />
   </head>
   <body>
-    <main class="height-100">
+    <main>
       <h1 class='aling-center'>The Snake Game</h1>
       <div class='info width-100'>
         <p id='score' class="aling-center"></p>
         <p id='speed' class="aling-center"></p>
       </div>
       <canvas width="500" height="500" id="screen"></canvas>
+
+    <div>
+      ha
+    </div>
     </main>
     <div id="modal"  class="width-100 height-100 has-fade">
       <div class="modal-content">
