--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,9 +16,10 @@
       </div>
       <canvas width="500" height="500" id="screen"></canvas>
 
-    <div>
-      ha
-    </div>
+      <div>
+        <div class="lever"><span></span></div>
+        <div class="base"></div>
+      </div>
     </main>
     <div id="modal"  class="width-100 height-100 has-fade">
       <div class="modal-content">
