the lever move left and right

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,7 +17,7 @@
       <canvas width="500" height="500" id="screen"></canvas>
 
       <div>
-        <div class="lever"><span></span></div>
+        <div id='lever' class="lever"><span id='base'></span></div>
         <div class="base"></div>
       </div>
     </main>
