--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/public/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Snake Game</title>
-    <link rel="stylesheet" href="/public/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <main>
@@ -37,6 +37,6 @@
         <button id="btn-modal">Start</button>
       </div>
     </div>
-    <script type="module" src="/public/js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
